@@ -43,6 +43,7 @@ struct VerifyOpaqueJobPrivate : public JobPrivate
 {
     QString m_inputFilePath;
     QString m_outputFilePath;
+    bool m_processAllSignatures = false;
 };
 
 }
